--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -57,13 +57,56 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="e7h-3s-aWU">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="120" id="e7h-3s-aWU" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="e7h-3s-aWU" id="mij-Ap-u5l">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qse-G9-kU7">
+                                            <rect key="frame" x="0.0" y="18" width="65" height="84"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="65" id="2eq-8Y-W6N"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="4OL-mm-yFn"/>
+                                                <constraint firstAttribute="width" constant="65" id="n4H-k9-H27"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cHH-O5-rDC">
+                                            <rect key="frame" x="73" y="18" width="68.666666666666686" height="22"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyq-ms-GGe">
+                                            <rect key="frame" x="73" y="48" width="321" height="46"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="cHH-O5-rDC" firstAttribute="leading" secondItem="qse-G9-kU7" secondAttribute="trailing" id="2wU-S5-4f8"/>
+                                        <constraint firstItem="cHH-O5-rDC" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="topMargin" constant="8" id="3N2-GT-BYR"/>
+                                        <constraint firstItem="qse-G9-kU7" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="topMargin" constant="18" id="Htm-Ol-8wN"/>
+                                        <constraint firstItem="cHH-O5-rDC" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="topMargin" id="Hvu-Rq-Udr"/>
+                                        <constraint firstItem="gyq-ms-GGe" firstAttribute="top" secondItem="cHH-O5-rDC" secondAttribute="bottom" constant="4" id="Qst-Vl-DG7"/>
+                                        <constraint firstItem="cHH-O5-rDC" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="topMargin" id="bo7-9L-GpN"/>
+                                        <constraint firstItem="gyq-ms-GGe" firstAttribute="leading" secondItem="qse-G9-kU7" secondAttribute="trailing" constant="8" id="cRp-Bf-kez"/>
+                                        <constraint firstAttribute="bottom" secondItem="qse-G9-kU7" secondAttribute="bottom" constant="18" id="fFW-oa-9kd"/>
+                                        <constraint firstItem="qse-G9-kU7" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="top" id="geL-4f-bqM"/>
+                                        <constraint firstItem="cHH-O5-rDC" firstAttribute="leading" secondItem="qse-G9-kU7" secondAttribute="trailing" constant="8" id="kAV-xK-d8W"/>
+                                        <constraint firstItem="cHH-O5-rDC" firstAttribute="leading" secondItem="mij-Ap-u5l" secondAttribute="leadingMargin" constant="8" id="lho-Iy-aN2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="gyq-ms-GGe" secondAttribute="bottom" id="ptc-Qi-Tj8"/>
+                                        <constraint firstItem="qse-G9-kU7" firstAttribute="leading" secondItem="mij-Ap-u5l" secondAttribute="leading" id="q6d-3L-ZCu"/>
+                                        <constraint firstItem="qse-G9-kU7" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="top" constant="18" id="xoy-Ir-DzH"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="qse-G9-kU7" id="7VL-4b-v1L"/>
+                                    <outlet property="tweetContent" destination="gyq-ms-GGe" id="jHh-PN-kBn"/>
+                                    <outlet property="userNameLabel" destination="cHH-O5-rDC" id="2r1-5S-3Lx"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -82,7 +125,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gaL-a1-Aze" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1674" y="206"/>
+            <point key="canvasLocation" x="1673.913043478261" y="205.58035714285714"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Emz-uF-5e7">
