--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -57,15 +57,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="120" id="e7h-3s-aWU" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="150" id="e7h-3s-aWU" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="e7h-3s-aWU" id="mij-Ap-u5l">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qse-G9-kU7">
-                                            <rect key="frame" x="0.0" y="18" width="65" height="84"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qse-G9-kU7">
+                                            <rect key="frame" x="0.0" y="18" width="65" height="76"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="65" id="2eq-8Y-W6N"/>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="4OL-mm-yFn"/>
@@ -73,21 +73,46 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cHH-O5-rDC">
-                                            <rect key="frame" x="73" y="18" width="68.666666666666686" height="22"/>
+                                            <rect key="frame" x="73" y="11" width="68.666666666666686" height="18"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyq-ms-GGe">
-                                            <rect key="frame" x="73" y="48" width="321" height="46"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="325" translatesAutoresizingMaskIntoConstraints="NO" id="gyq-ms-GGe">
+                                            <rect key="frame" x="73" y="48" width="321" height="91"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uiw-nS-glo" userLabel="FavIcon">
+                                            <rect key="frame" x="354" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="qPl-GZ-PyJ"/>
+                                                <constraint firstAttribute="height" constant="30" id="uck-ad-rQl"/>
+                                            </constraints>
+                                            <state key="normal" image="like-icon-gray"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="e7h-3s-aWU" eventType="touchUpInside" id="CRg-bx-YwO"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRV-PS-p7a" userLabel="RetweetIcon">
+                                            <rect key="frame" x="314" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="6bb-ts-MRG"/>
+                                                <constraint firstAttribute="height" constant="30" id="t4e-1j-JFl"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon-black"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="e7h-3s-aWU" eventType="touchUpInside" id="un8-vD-niq"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="cHH-O5-rDC" firstAttribute="leading" secondItem="qse-G9-kU7" secondAttribute="trailing" id="2wU-S5-4f8"/>
                                         <constraint firstItem="cHH-O5-rDC" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="topMargin" constant="8" id="3N2-GT-BYR"/>
+                                        <constraint firstItem="uiw-nS-glo" firstAttribute="leading" secondItem="lRV-PS-p7a" secondAttribute="trailing" constant="10" id="5gZ-7G-HOT"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="lRV-PS-p7a" secondAttribute="bottom" constant="10" id="C8Q-gy-uvH"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="uiw-nS-glo" secondAttribute="bottom" constant="10" id="F4O-fJ-yMN"/>
                                         <constraint firstItem="qse-G9-kU7" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="topMargin" constant="18" id="Htm-Ol-8wN"/>
                                         <constraint firstItem="cHH-O5-rDC" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="topMargin" id="Hvu-Rq-Udr"/>
                                         <constraint firstItem="gyq-ms-GGe" firstAttribute="top" secondItem="cHH-O5-rDC" secondAttribute="bottom" constant="4" id="Qst-Vl-DG7"/>
@@ -97,13 +122,16 @@
                                         <constraint firstItem="qse-G9-kU7" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="top" id="geL-4f-bqM"/>
                                         <constraint firstItem="cHH-O5-rDC" firstAttribute="leading" secondItem="qse-G9-kU7" secondAttribute="trailing" constant="8" id="kAV-xK-d8W"/>
                                         <constraint firstItem="cHH-O5-rDC" firstAttribute="leading" secondItem="mij-Ap-u5l" secondAttribute="leadingMargin" constant="8" id="lho-Iy-aN2"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="gyq-ms-GGe" secondAttribute="bottom" id="ptc-Qi-Tj8"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="uiw-nS-glo" secondAttribute="trailing" constant="10" id="o4e-Gb-MyS"/>
                                         <constraint firstItem="qse-G9-kU7" firstAttribute="leading" secondItem="mij-Ap-u5l" secondAttribute="leading" id="q6d-3L-ZCu"/>
+                                        <constraint firstItem="uiw-nS-glo" firstAttribute="top" secondItem="gyq-ms-GGe" secondAttribute="bottom" constant="10" id="wSH-Yf-1Tf"/>
                                         <constraint firstItem="qse-G9-kU7" firstAttribute="top" secondItem="mij-Ap-u5l" secondAttribute="top" constant="18" id="xoy-Ir-DzH"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="uiw-nS-glo" id="3nU-1e-W1N"/>
                                     <outlet property="profileImageView" destination="qse-G9-kU7" id="7VL-4b-v1L"/>
+                                    <outlet property="retweetButton" destination="lRV-PS-p7a" id="7RT-I6-01e"/>
                                     <outlet property="tweetContent" destination="gyq-ms-GGe" id="jHh-PN-kBn"/>
                                     <outlet property="userNameLabel" destination="cHH-O5-rDC" id="2r1-5S-3Lx"/>
                                 </connections>
@@ -224,6 +252,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="like-icon-gray" width="20" height="20"/>
+        <image name="retweet-icon-black" width="20" height="20"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
